--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   ],
   "author": "Koji Takami <vzg03566@gmail.com>",
   "license": "MIT",
+  "dependencies": {
+    "nanoid": ">=3.1.31"
+  },
   "devDependencies": {
+    "nanoid": ">=3.1.31",
     "chai": "^4.3.6",
     "mocha": "^9.2.1"
   }
